@@ -33,12 +33,8 @@ class WeblinksController extends JController
 		// Get and render the view.
 		if ($view = &$this->getView($vName, $vFormat))
 		{
-			switch ($vName)
-			{
-				default:
-					$model = &$this->getModel($vName);
-					break;
-			}
+			// Get the model for the view.
+			$model = &$this->getModel($vName);
 
 			// Push the model into the view (as default).
 			$view->setModel($model, true);
@@ -48,6 +44,10 @@ class WeblinksController extends JController
 			$view->assignRef('document', $document);
 
 			$view->display();
+
+			// Load the submenu.
+			require_once JPATH_COMPONENT.DS.'helpers'.DS.'weblinks.php';
+			WeblinksHelper::addSubmenu($vName);
 		}
 	}
 }
