@@ -4,9 +4,9 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-CONTENT_LINK_ARTICLES=Articles
-CONTENT_LINK_CATEGORIES=Categories
-CONTENT_LINK_FEATURED=Featured
+CONTENT_SUBMENU_ARTICLES=Articles
+CONTENT_SUBMENU_CATEGORIES=Categories
+CONTENT_SUBMENU_FEATURED=Featured
 
 CONTENT_ITEMS_SEARCH_FILTER=Search title or alias. Prefix with id: to search for an article id.
 
